--- a/custom/purchase_request/wizard/rejection_wizard.xml
+++ b/custom/purchase_request/wizard/rejection_wizard.xml
@@ -7,10 +7,11 @@
          <field name="arch" type="xml">
              <form string="rejection wizard">
                      <group>
-                         <field name="reject_reason_id"/>
+<!--                         <field name="wizard_reject_reason_id"/>-->
+                         <field name="wizard_reject_reason"/>
                      </group>
                      <footer>
-                         <button name="action_confirm" string="Submit" type="object" class="btn-primary"/>
+                         <button name="submit_button" string="Submit" type="object" class="btn-primary"/>
                          <button string="Cancel" class="btn-secondary" special="cancel"/>
                      </footer>
              </form>
