adding purchase order

--- a/custom/purchase_request/views/views.xml
+++ b/custom/purchase_request/views/views.xml
@@ -28,7 +28,13 @@
 
 
                         <button name="send_mail" type="object" string="Send Mail" states="approve"
+                        
                                 class="oe_highlight"/>
+                                
+                                
+                        
+                        <button name="button_create_po" string="Create PO" type="object" class="oe_highlight"
+                                attrs="{'invisible': [('state', '!=', 'approve')]}"/>        
 
 
 
